v1.1.0/modules/schema/pages/class/UnderexcLimIEEE1.adoc
= `UnderexcLimIEEE1`
:toclevels: 4


+++Type UEL1 model which has a circular limit boundary when plotted in terms of machine reactive power vs. real power output.
Reference: IEEE UEL1 421.5-2005, 10.1.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:UnderexcLimIEEE1`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]
**** *`UnderexcLimIEEE1`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<kuc,`kuc`>>
//| [[slots_table.kuc]]<<kuc,`kuc`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++UEL centre setting (<i>K</i><i><sub>UC</sub></i>).  Typical value = 1,38.+++
| _n/a_

| <<kuf,`kuf`>>
//| [[slots_table.kuf]]<<kuf,`kuf`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++UEL excitation system stabilizer gain (<i>K</i><i><sub>UF</sub></i>).  Typical value = 3,3.+++
| _n/a_

| <<kui,`kui`>>
//| [[slots_table.kui]]<<kui,`kui`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++UEL integral gain (<i>K</i><i><sub>UI</sub></i>).  Typical value = 0.+++
| _n/a_

| <<kul,`kul`>>
//| [[slots_table.kul]]<<kul,`kul`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++UEL proportional gain (<i>K</i><i><sub>UL</sub></i>).  Typical value = 100.+++
| _n/a_

| <<kur,`kur`>>
//| [[slots_table.kur]]<<kur,`kur`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++UEL radius setting (<i>K</i><i><sub>UR</sub></i>).  Typical value = 1,95.+++
| _n/a_

| <<tu1,`tu1`>>
//| [[slots_table.tu1]]<<tu1,`tu1`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++UEL lead time constant (<i>T</i><i><sub>U1</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<tu2,`tu2`>>
//| [[slots_table.tu2]]<<tu2,`tu2`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++UEL lag time constant (<i>T</i><i><sub>U2</sub></i>) (&gt;= 0).  Typical value = 0,05.+++
| _n/a_

| <<tu3,`tu3`>>
//| [[slots_table.tu3]]<<tu3,`tu3`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++UEL lead time constant (<i>T</i><i><sub>U3</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<tu4,`tu4`>>
//| [[slots_table.tu4]]<<tu4,`tu4`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++UEL lag time constant (<i>T</i><i><sub>U4</sub></i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<vucmax,`vucmax`>>
//| [[slots_table.vucmax]]<<vucmax,`vucmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++UEL maximum limit for operating point phasor magnitude (<i>V</i><i><sub>UCMAX</sub></i>).  Typical value = 5,8.+++
| _n/a_

| <<vuimax,`vuimax`>>
//| [[slots_table.vuimax]]<<vuimax,`vuimax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++UEL integrator output maximum limit (<i>V</i><i><sub>UIMAX</sub></i>) (&gt; UnderexcLimIEEE1.vuimin).+++
| _n/a_

| <<vuimin,`vuimin`>>
//| [[slots_table.vuimin]]<<vuimin,`vuimin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++UEL integrator output minimum limit (<i>V</i><i><sub>UIMIN</sub></i>) (&lt; UnderexcLimIEEE1.vuimax).+++
| _n/a_

| <<vulmax,`vulmax`>>
//| [[slots_table.vulmax]]<<vulmax,`vulmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++UEL output maximum limit (<i>V</i><i><sub>ULMAX</sub></i>) (&gt; UnderexcLimIEEE1.vulmin).  Typical value = 18.+++
| _n/a_

| <<vulmin,`vulmin`>>
//| [[slots_table.vulmin]]<<vulmin,`vulmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++UEL output minimum limit (<i>V</i><i><sub>ULMIN</sub></i>) (&lt; UnderexcLimIEEE1.vulmax).  Typical value = -18.+++
| _n/a_

| <<vurmax,`vurmax`>>
//| [[slots_table.vurmax]]<<vurmax,`vurmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++UEL maximum limit for radius phasor magnitude (<i>V</i><i><sub>URMAX</sub></i>).  Typical value = 5,8.+++
| _n/a_

| <<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
//| [[slots_table.ExcitationSystemDynamics]]<<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
| 1 +
xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
| +++Excitation system model with which this underexcitation limiter model is associated.+++
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]

| <<RemoteInputSignal,`RemoteInputSignal`>>
//| [[slots_table.RemoteInputSignal]]<<RemoteInputSignal,`RemoteInputSignal`>>
| 0..1 +
xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]
| +++Remote input signal used by this underexcitation limiter model.+++
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#ExcitationSystemDynamics]
=== `ExcitationSystemDynamics`
+++Excitation system model with which this underexcitation limiter model is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcitationLimiterDynamics.ExcitationSystemDynamics`
| Cardinality
| 1
| Type
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| Inherited from
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]


|===

////
[.text-left]
--
<<slots_table.ExcitationSystemDynamics,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#kuc]
=== `kuc`
+++UEL centre setting (<i>K</i><i><sub>UC</sub></i>).  Typical value = 1,38.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE1.kuc`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kuc,&#10548;>>
--
////


//[discrete]
[#kuf]
=== `kuf`
+++UEL excitation system stabilizer gain (<i>K</i><i><sub>UF</sub></i>).  Typical value = 3,3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE1.kuf`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kuf,&#10548;>>
--
////


//[discrete]
[#kui]
=== `kui`
+++UEL integral gain (<i>K</i><i><sub>UI</sub></i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE1.kui`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kui,&#10548;>>
--
////


//[discrete]
[#kul]
=== `kul`
+++UEL proportional gain (<i>K</i><i><sub>UL</sub></i>).  Typical value = 100.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE1.kul`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kul,&#10548;>>
--
////


//[discrete]
[#kur]
=== `kur`
+++UEL radius setting (<i>K</i><i><sub>UR</sub></i>).  Typical value = 1,95.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE1.kur`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kur,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#RemoteInputSignal]
=== `RemoteInputSignal`
+++Remote input signal used by this underexcitation limiter model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcitationLimiterDynamics.RemoteInputSignal`
| Cardinality
| 0..1
| Type
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]

| Inherited from
| xref::class/UnderexcitationLimiterDynamics.adoc[`UnderexcitationLimiterDynamics`]


|===

////
[.text-left]
--
<<slots_table.RemoteInputSignal,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tu1]
=== `tu1`
+++UEL lead time constant (<i>T</i><i><sub>U1</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE1.tu1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tu1,&#10548;>>
--
////


//[discrete]
[#tu2]
=== `tu2`
+++UEL lag time constant (<i>T</i><i><sub>U2</sub></i>) (&gt;= 0).  Typical value = 0,05.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE1.tu2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tu2,&#10548;>>
--
////


//[discrete]
[#tu3]
=== `tu3`
+++UEL lead time constant (<i>T</i><i><sub>U3</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE1.tu3`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tu3,&#10548;>>
--
////


//[discrete]
[#tu4]
=== `tu4`
+++UEL lag time constant (<i>T</i><i><sub>U4</sub></i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE1.tu4`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tu4,&#10548;>>
--
////


//[discrete]
[#vucmax]
=== `vucmax`
+++UEL maximum limit for operating point phasor magnitude (<i>V</i><i><sub>UCMAX</sub></i>).  Typical value = 5,8.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE1.vucmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vucmax,&#10548;>>
--
////


//[discrete]
[#vuimax]
=== `vuimax`
+++UEL integrator output maximum limit (<i>V</i><i><sub>UIMAX</sub></i>) (&gt; UnderexcLimIEEE1.vuimin).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE1.vuimax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vuimax,&#10548;>>
--
////


//[discrete]
[#vuimin]
=== `vuimin`
+++UEL integrator output minimum limit (<i>V</i><i><sub>UIMIN</sub></i>) (&lt; UnderexcLimIEEE1.vuimax).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE1.vuimin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vuimin,&#10548;>>
--
////


//[discrete]
[#vulmax]
=== `vulmax`
+++UEL output maximum limit (<i>V</i><i><sub>ULMAX</sub></i>) (&gt; UnderexcLimIEEE1.vulmin).  Typical value = 18.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE1.vulmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vulmax,&#10548;>>
--
////


//[discrete]
[#vulmin]
=== `vulmin`
+++UEL output minimum limit (<i>V</i><i><sub>ULMIN</sub></i>) (&lt; UnderexcLimIEEE1.vulmax).  Typical value = -18.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE1.vulmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vulmin,&#10548;>>
--
////


//[discrete]
[#vurmax]
=== `vurmax`
+++UEL maximum limit for radius phasor magnitude (<i>V</i><i><sub>URMAX</sub></i>).  Typical value = 5,8.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UnderexcLimIEEE1.vurmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vurmax,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
